        - Add quote_names connection option. When set to true automatically
          sets quote_char and name_sep appropriate for your RDBMS
        - IC::DateTime support for MSSQL over DBD::ADO
        - Both the ::ODBC and ::ADO dispatchers now warn if a rdbms-specific
          driver is not found for this connection before falling back to
          plain ::Storage::DBI

    * Fixes
        - Fix ::Storage::DBI::* MRO problems on 5.8.x perls
        - Disable mysql_auto_reconnect for MySQL - depending on the ENV
          it sometimes defaults to on and causes major borkage on older
          DBD::mysql versions
        - Fix dropped bind values in select/group_by on Oracle (omission
          from 0542ec57 and 4c2b30d6)
        - Fix remaining errors with Oracle and identifiers longer than the
          Oracle-imposed maximum of 30 characters (RT#66390)
        - Fix problems with M.A.D. under CGI::SpeedyCGI (RT#65131)
        - Better error handling when prepare() fails silently
        - Fixes skipped lines when a comment is followed by a statement
          when deploying a schema via sql file
        - Fix reverse_relationship_info on prototypical result sources
          (sources not yet registered with a schema)
        - Warn and skip relationships missing from a partial schema during
          dbic cascade_delete
        - Automatically require the requested cursor class before use
          (RT#64795)
        - Work around a Firebird ODBC driver bug exposed by DBD::ODBC 1.29
        - Fix exiting via next warnings in ResultSource::sequence()
        - Fix stripping of table qualifiers in update/delete in arrayref
          condition elements
        - Change SQLMaker carp-monkeypatch to be compatible with versions
          of SQL::Abstract >= 1.73

    * Misc
        - Rewire all warnings to a new Carp-like implementation internal
          to DBIx::Class, and remove the Carp::Clan dependency